<resources>
    <string name="app_name">FoodPlaceManager</string>
    <string name="action_settings">Settings</string>
    <string name="createButtonText">Create</string>
    <string name="helperTextDescription">Description</string>
    <string name="helperTextName">Name</string>
    <string name="delete">Delete</string>
    <string name="add_to_storage">Add to storage</string>
    <string name="expires">Expires</string>
</resources>
